# msda-triton

./: .gitignore  LICENSE  README.md  pyproject.toml
msda_triton/: __init__.py  torch.py  torch_frontend.py  triton.py  triton_kernels.py
msda_triton/triton/: msda_fw.py
scripts/: benchmark.py
src/msda_triton/: __init__.py  autograd_function.py  frontend.py  kernels.py  torch_frontend.py  triton_kernels.py
tests/: conftest.py  test_kernel.py  test_msda.py
