[project]
name = "msda-triton"
version = "0.1.1"
description = "Multiscale deformable attention kernels in Triton with PyTorch interface."
readme = "README.md"
authors = [
    { name = "Ziga R.", email = "102856773+rziga@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "setuptools>=75.8.2",
    "torch>=2.1.0",
]
